(ISA-337) catalogue correct scroll overflow

--- a/frontend/src/ui/css/left-drawer.scss
+++ b/frontend/src/ui/css/left-drawer.scss
@@ -47,108 +47,126 @@
             }
         }
     }
-}
 
-.left-drawer-tabs {
-    overflow-y: hidden;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-
-    > .bp3-tab-list {
-        background-color: $seamap-deep-blue-lighter;
-        color: $seamap-color-7;
-        height: 49px;
-        .bp3-tab { color: inherit; }
-
-        .bp3-tab-indicator-wrapper {
-            background-color: $seamap-deep-blue;
-
-            .bp3-tab-indicator {
-                background-color: $seamap-color-7;
-                margin-bottom: 12.5px;
-            }
-        }
-    }
-
-    > .bp3-tab-panel {
-        overflow-y: auto;
-        flex: 1;
-    }
-
-    .layer-search {
-        height: 39px;
+    .left-drawer-tabs {
+        overflow-y: hidden;
         display: flex;
-        margin: 21px 12px 0 12px;
-        >* { height: 39px; }
-
-        .bp3-input, .bp3-input:focus {
-            box-shadow: none;
-            -webkit-box-shadow: none;
-        }
-
-        .bp3-input {
-            border-radius: 15px;
-            padding-left: 15px;
-            font-size: 15px;
-
-            &::-ms-clear,
-            &::-ms-reveal { display: none; width : 0; height: 0; }
-
-            &::-webkit-search-decoration,
-            &::-webkit-search-cancel-button,
-            &::-webkit-search-results-button,
-            &::-webkit-search-results-decoration { display: none; }
-        }
-
-        .bp3-input-action {
-            display: flex;
-            align-items: center;
-            color: $seamap-deep-blue-lighter;
-            padding-right: 15px;
-        }
-    }
-
-    .bp3-tree {
-        font-size: 12px;
-        .bp3-tree-node-caret-none { display: none; }
-        .bp3-tree-node-content { height: 25px; }
-
-        .catalogue-layer-node {
-            color: $seamap-deep-blue;
-            >.bp3-tree-node-content {
-                cursor: default;
-                height: 28px;
-                &:hover { background: none; }
-            }
-
-            .layer-status-icons .bp3-icon,
-            .layer-control {
-                color: $seamap-medium-blue;
-            }
-            
-            &.active-layer {
-                background-color: $seamap-light-blue;
+        flex-direction: column;
+        height: 100%;
+    
+        > .bp3-tab-list {
+            background-color: $seamap-deep-blue-lighter;
+            color: $seamap-color-7;
+            height: 49px;
+            .bp3-tab { color: inherit; }
+    
+            .bp3-tab-indicator-wrapper {
+                background-color: $seamap-deep-blue;
+    
+                .bp3-tab-indicator {
+                    background-color: $seamap-color-7;
+                    margin-bottom: 12.5px;
+                }
             }
         }
+    
+        > .bp3-tab-panel {
+            flex: 1;
+            min-height: 0;
+        }
 
-        .bp3-tree-node:not(.catalogue-layer-node) {
-            &:not(.category)>.bp3-tree-node-content { font-weight: bold; }  
+        .bp3-tab-panel.catalogue {
+            flex-direction: column;
+            &:not([aria-hidden="true"]) { display: flex; }
 
-            &.category>.bp3-tree-node-content {
-                height: 32px;
-                font-size: 20px;
-                font-family: $headings-font-family;
-            }
-            
-            >.bp3-tree-node-content {
-                >.bp3-tree-node-label {
+            .layer-search {
+                height: 39px;
+                display: flex;
+                margin: 21px 12px 0 12px;
+                >* { height: 39px; }
+        
+                .bp3-input, .bp3-input:focus {
+                    box-shadow: none;
+                    -webkit-box-shadow: none;
+                }
+        
+                .bp3-input {
+                    border-radius: 15px;
+                    padding-left: 15px;
+                    font-size: 15px;
+        
+                    &::-ms-clear,
+                    &::-ms-reveal { display: none; width : 0; height: 0; }
+        
+                    &::-webkit-search-decoration,
+                    &::-webkit-search-cancel-button,
+                    &::-webkit-search-results-button,
+                    &::-webkit-search-results-decoration { display: none; }
+                }
+        
+                .bp3-input-action {
                     display: flex;
                     align-items: center;
-                    color: $seamap-deep-blue;
+                    color: $seamap-deep-blue-lighter;
+                    padding-right: 15px;
+                }
+            }
+        
+            >.bp3-tabs {
+                flex: 1;
+                min-height: 0;
+                display: flex;
+                flex-direction: column;
 
-                    >.bp3-tree-node-caret {
-                        color: inherit;
+                .bp3-tab-panel {
+                    flex: 1;
+                    min-height: 0;
+                    overflow: auto;
+                }
+
+                .bp3-tree {
+                    font-size: 12px;
+                    .bp3-tree-node-caret-none { display: none; }
+                    .bp3-tree-node-content { height: 25px; }
+            
+                    .catalogue-layer-node {
+                        color: $seamap-deep-blue;
+                        >.bp3-tree-node-content {
+                            cursor: default;
+                            height: 28px;
+                            &:hover { background: none; }
+                        }
+            
+                        .layer-status-icons .bp3-icon,
+                        .layer-control {
+                            color: $seamap-medium-blue;
+                        }
+            
+                        &.active-layer {
+                            background-color: $seamap-light-blue;
+                        }
+                    }
+            
+                    .bp3-tree-node:not(.catalogue-layer-node) {
+                        &:not(.category)>.bp3-tree-node-content { font-weight: bold; }  
+            
+                        &.category>.bp3-tree-node-content {
+                            height: 32px;
+                            font-size: 20px;
+                            font-family: $headings-font-family;
+                        }
+                        
+                        >.bp3-tree-node-content {
+                            >.bp3-tree-node-label {
+                                display: flex;
+                                align-items: center;
+                                color: $seamap-deep-blue;
+            
+                                >.bp3-tree-node-caret {
+                                    color: inherit;
+                                }
+                            }
+                        }
                     }
                 }
             }
